<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/iv_backdrop_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/backdrop_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/test_img_backdrop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/rectangle_white_gradient"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle_white_gradient" />

    <ImageView
        android:id="@+id/iv_poster_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/material_baseline_grid_4x"
        android:adjustViewBounds="true"
        android:contentDescription="@string/poster"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:srcCompat="@drawable/test_img_poster" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_baseline_grid_2x"
        android:layout_marginTop="@dimen/material_baseline_grid_2x"
        android:layout_marginEnd="@dimen/material_baseline_grid_2x"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_primary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_poster_image"
        app:layout_constraintTop_toBottomOf="@+id/iv_backdrop_image"
        tools:text="@string/test_movie_name" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="iv_poster_image,tv_name" />

    <ImageView
        android:id="@+id/iv_star"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/star"
        android:layout_marginStart="@dimen/material_baseline_grid_2x"
        android:layout_marginTop="@dimen/material_baseline_grid_2x"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier"
        app:srcCompat="@drawable/ic_star" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_baseline_grid_1x"
        android:textColor="@color/light_black"
        android:textSize="@dimen/text_size_primary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_star"
        app:layout_constraintStart_toEndOf="@+id/iv_star"
        app:layout_constraintTop_toTopOf="@+id/iv_star"
        tools:text="@string/test_rating" />

    <View
        android:id="@+id/vertical_line"
        android:layout_width="3dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/material_baseline_grid_2x"
        android:background="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="@+id/iv_star"
        app:layout_constraintStart_toEndOf="@id/tv_rating"
        app:layout_constraintTop_toTopOf="@+id/iv_star" />

    <TextView
        android:id="@+id/tv_release_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_baseline_grid_2x"
        android:textColor="@color/light_black"
        android:textSize="@dimen/text_size_primary"
        app:layout_constraintBottom_toBottomOf="@+id/iv_star"
        app:layout_constraintStart_toEndOf="@+id/vertical_line"
        app:layout_constraintTop_toTopOf="@+id/iv_star"
        tools:text="@string/test_release_year" />

    <TextView
        android:id="@+id/label_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_baseline_grid_2x"
        android:layout_marginTop="@dimen/material_baseline_grid_4x"
        android:text="@string/overview"
        android:textColor="@color/light_black"
        android:textSize="@dimen/text_size_primary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_star" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_baseline_grid_2x"
        android:layout_marginTop="@dimen/material_baseline_grid_1x"
        android:layout_marginEnd="@dimen/material_baseline_grid_2x"
        android:textSize="@dimen/text_size_secondary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_overview"
        tools:text="@string/test_overview" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>